# postgres-mcp-server

./: .env.sample  LICENSE  README.md  pyproject.toml
src/: main.py
src/utils/: db.py  logger.py  settings.py  tables_parser.py  validation.py
