[project]
name = "postgres-mcp-server"
version = "0.1.0"
description = "MCPv2 server for PostgresDB focused on seamless data exploration with LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.8.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]
